// This file is copied from kms. 
// It's just used for reference. 
// It will not be used to generage rust files. 
// Message bodies can be removed or inconsistent with the original ones

syntax = "proto2";
package kms_proto;

enum EncType {
  Aead = 0;
  ProtectedFs = 1;
}

message AeadConfig {
  required bytes key = 1;
  required bytes nonce = 2;
  required bytes ad = 3;
}

message ProtectedFsConfig {
  required bytes key = 1;
}

message KeyConfig {
  oneof config {
    AeadConfig Aead = 1;
    ProtectedFsConfig ProtectedFs = 2;
  }
}
